app/styles/main.scss
@import "compass/css3/user-interface";
@import "compass/css3/box-shadow";
@import url('http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz');

$baseMargin: 3px;
$widgetMargin: 6px;

$widgetBackground: rgb(200, 200, 180);
$mainBackground: rgb(255, 240, 200);
$canvasWidth: 750px;

body {
    font-family: 'Yanone Kaffeesatz', sans-serif !important;
    font: 'Yanone Kaffeesatz', sans-serif !important;
    button, input, select {
        font-family: 'Yanone Kaffeesatz', sans-serif !important;
        font: 'Yanone Kaffeesatz', sans-serif !important;
    }
}

@mixin palette {
    @include box-shadow(rgb(6, 6, 26) 2px 2px 10px);

    top: $widgetMargin;

    width: $canvasWidth - $baseMargin;
    position: relative;
    background-color: $widgetBackground;

    padding: $baseMargin;
    clear: both;

    .c64-colorItem {
        display: inline-block;
        width: 30px;
        height: 30px;
    }
}

@mixin dialogContent($width) {
    border-radius: 10px;
    background: #D5D5D5;
    width: $width;
    top: 50%;
    padding: 10px;
    position: fixed;
    left: 50%;
    margin-left: -$width/2;
    margin-top: -100px;
    z-index: 100001;
}

.c64-colorItem {
    display: inline-block;
    width: 30px;
    height: 30px;
}

.c64-mainView {
    margin-top: 25px;
    margin-left: 50px;
}

body {
    background-color: $mainBackground;
    background-image: url('../images/green_cup.png');
    background-repeat: repeat;

}

.c64-FileSelector {
    @include box-shadow(rgb(6, 6, 26) 2px 2px 10px);
    background-color: $widgetBackground;
    margin-bottom: $baseMargin * 2;
    padding: $baseMargin;
    width: $canvasWidth - $baseMargin;
}

.c64-dialog {
    > .c64-dialog-mask {
        opacity: 0.5;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        margin-right: auto;
        margin-left: auto;
        position: fixed;
        width: 100%;
        height: 100%;
        background: #000;
        z-index: 100000;
    }
}

.c64-SwapColorDialog {
    .c64-dialog-content {
        @include dialogContent(550px);

        > .c64-startColor {
            display: inline-block;
            width: 30px;
            height: 30px;
        }
    }

    .c64-swapColorPalette {
        @include palette;
        width: initial;
        top: 0px;
        margin-bottom: 6px;

        > .c64-selected {
            border-color: black;
            border-style: solid;
            border-width: 3px;
        }
    }
}

.c64-SelectColorDialog {
    .c64-dialog-content {
        @include dialogContent(486px);
    }

    .c64-selectColorPalette {
        @include palette;
        width: initial;
        top: 0px;
        margin-bottom: 6px;
    }
}

.c64-CanvasView {
    width: 100%;
    height: 400px;
    position: relative;
}

.c64-hiddenCanvas {
    display: none;
    image-rendering: optimizeSpeed;             // Older versions of FF
    image-rendering: -moz-crisp-edges;          // FF 6.0+
    image-rendering: -webkit-optimize-contrast; // Safari
    image-rendering: -o-crisp-edges;            // OS X & Windows Opera (12.02+)
    image-rendering: pixelated;                 // Awesome future-browsers
    -ms-interpolation-mode: nearest-neighbor;   // IE
}

.c64-paintCanvas {
    @include box-shadow(rgb(6, 6, 26) 2px 2px 10px);

    width: 750px;

    image-rendering: optimizeSpeed;             // Older versions of FF
    image-rendering: -moz-crisp-edges;          // FF 6.0+
    image-rendering: -webkit-optimize-contrast; // Safari
    image-rendering: -o-crisp-edges;            // OS X & Windows Opera (12.02+)
    image-rendering: pixelated;                 // Awesome future-browsers
    -ms-interpolation-mode: nearest-neighbor;   // IE

//    margin: $baseMargin;
    float: left;
    border-width: 1px;
    border-color: black;
    border-style: solid;
}


.c64-sidePanel {
    > div {
        @include box-shadow(rgb(6, 6, 26) 2px 2px 10px);
    }

    box-sizing: border-box;
  //  margin: 0px $widgetMargin $widgetMargin $widgetMargin;
    width: 160px + 2*$baseMargin;
    float: left;
    position: absolute;
    left: $canvasWidth + $widgetMargin;
    top: 0px;
}

.c64-ZoomControl {
    margin-bottom: $widgetMargin;
    background-color: $widgetBackground;
    padding: $baseMargin;
//    margin: 0px 0px 0px $widgetMargin;

    > canvas {
        display: block;
        margin-left: auto;
        margin-right: auto;
        //width: 160px;
        //height: 100px
    }

    > .c64-buttons {
        margin-left: auto;
        margin-right: auto;
        margin-top: $baseMargin;
//        width: 160px - 2*$baseMargin;
        > button {
            display: inline-block;
            width: 50%;
            height: 30px;
        }
    }
}

.c64-toolBox {
    margin-bottom: $widgetMargin;
    background-color: $widgetBackground;

    > div {
        display: inline-block;
        width: 30px;
        height: 30px;
        border-width: 1px;
        border-color: black;
        border-style: solid;

        &.c64-selected {
            border-width: 3px;
        }
    }

    .c64-tool-brush {
        background-image: url('../images/brush.png');
        background-size: 100%;
    }

    .c64-tool-bucket {
        background-image: url('../images/bucket.png');
        background-size: 100%;
    }

    .c64-tool-colorswapper {
        background-image: url('../images/colorswap.png');
        background-size: 100%;
    }

}

.c64-gridButtons {
    padding: $baseMargin;
    margin-bottom: $widgetMargin;
    background-color: $widgetBackground;
    button {
        width: 100%;
    }
}

.c64-modeSelector {
    padding: $baseMargin;
    margin-bottom: $widgetMargin;
    background-color: $widgetBackground;
    select {
        float: right;
    }
}

.c64-ColorSelector {
    @include palette;

    .c64-secondarySelection {
        position: absolute;
        right: $baseMargin;
        border-width: 1px;
        border-color: black;
        border-style: solid;
    }

    .c64-primarySelection {
        position: absolute;
        right: 30px + $baseMargin;
        border-width: 1px;
        border-color: black;
        border-style: solid;
    }
}

.c64-BackgroundColorSelector {
    position: relative;
    line-height: 30px;
    margin-bottom: $widgetMargin;
    padding: $baseMargin;
    background-color: $widgetBackground;

    .c64-colorItem {
        position: absolute;
        top: $baseMargin;
        right: $baseMargin;
    }
}

.c64-undoView {
    background-color: $widgetBackground;
    padding: $baseMargin;
    > button {
        height: 20px;
        width: 50%;
    }
}

